Make sure time is visible for highlights.

--- a/Contents/Resources/Main.scss
+++ b/Contents/Resources/Main.scss
@@ -121,9 +121,10 @@ a {
     border-right: 0.5em solid $highlight-color;
   }
 
-  &.mention {
+  &.mention.message {
     .time {
       color: $highlight-color;
+      visibility: visible;
     }
   }
 }
